# bsc-graph-isomorphism

./: CMakeLists.txt  create_config.sh
src/: CMakeLists.txt  Graph.cc  Graph.h  GraphReader.cc  GraphReader.h  main.cc
tests/: CMakeLists.txt  GraphIsomorphismTests.cc  test_main.cc
